# igl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
appimage/: build-appimage.sh
ext/glad/: README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: cli.h  hermit.h  igl.h  loader.h  widgets.h
src/: cli.cpp  igl.cpp  loader.cpp  widgets.cpp
test/: igl_test.cpp
